manifest_Prod/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  namespace: petclinic-prod
  labels:
    app: petclinic-label-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-label-prod
  template:
    metadata:
      labels:
        app: petclinic-label-prod
    spec:
      serviceAccountName: petclinic-sa-prod
      containers:
      - name: petclinic-dev
        image: prasannakumarsinganamalla431/petclinic:10
        ports:
        - containerPort: 80
