manifest_Prod/statefullset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: petclinic-prod
spec:
  serviceName: "mysql-headless-backend"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      serviceAccountName: petclinic-sa-prod
      containers:
        - name: mysql
          image: prasannakumarsinganamalla431/petclinicmysql:v1
          volumeMounts:
            - name: mysql-storage-prod
              mountPath: /var/lib/mysql
  volumes:
    - name: mysql-storage-prod
      persistentVolumeClaim:
        claimName: mysql-storage-prod
