manifest_Prod/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-backend
  namespace: petclinic-prod
  annotations: #if error remove this 
    prometheus.io/path: /actuator/prometheus
    prometheus.io/scrape: "true" 
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
