manifest_Prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-prod
spec:
  type: ClusterIP
  selector:
    app: petclinic-label-prod
  ports:
    - port: 81
      targetPort: 80
